# rust_web_crawler

./: .gitignore  Cargo.toml  README.md
scripts/: create.sql
src/: block_url.rs  crawl.rs  crawler.rs  main.rs  unique_queue.rs
