[package]
name = "rust_web_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.27"
env_logger = "0.11.6"
hex = "0.4.3"
log = "0.4.25"
reqwest = "0.12.12"
rusqlite = { version = "0.33.0", features = ["bundled"]}
scraper = "0.22.0"
sha2 = "0.10.8"
tokio = {version = "1.43.0", features = ["full"] }
url = "2.5.4"
